<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vp_article"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="16dp" />

    <LinearLayout
        android:id="@+id/dots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal" />

    <!--   Region Menu Dzikir & Doa App    -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_dashboard_menu"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sub_title_menu_dashboard"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_qouliyah"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:cardBackgroundColor="@color/gray"
            app:cardCornerRadius="16dp"
            app:contentPadding="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:strokeWidth="0px">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="100dp"
                    android:layout_height="120dp"
                    android:contentDescription="@string/text_desc_qauliyah_shalat"
                    android:src="@drawable/ic_doa"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_menu_qauliyah_shalat"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_dzikir"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:cardBackgroundColor="@color/gray"
            app:cardCornerRadius="15dp"
            app:contentPadding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:strokeWidth="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image_dzikir"
                    android:layout_width="100dp"
                    android:layout_height="120dp"
                    android:contentDescription="@string/text_desc_dzikir_setiap_saat"
                    android:src="@drawable/ic_time"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_dzikir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/txt_menu_dzikir_setiap_saat"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/image_dzikir" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_harian"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:cardBackgroundColor="@color/gray"
            app:cardCornerRadius="15dp"
            app:contentPadding="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_qouliyah"
            app:strokeWidth="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image_harian"
                    android:layout_width="100dp"
                    android:layout_height="120dp"
                    android:contentDescription="@string/txt_desc_dzikir_doa_harian"
                    android:src="@drawable/ic_dzikir"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_harian"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/txt_dzikir_doa_harian"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/image_harian" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_pagi_petang"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:cardBackgroundColor="@color/gray"
            app:cardCornerRadius="15dp"
            app:contentPadding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_dzikir"
            app:strokeWidth="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image_pagi_petang"
                    android:layout_width="100dp"
                    android:layout_height="120dp"
                    android:contentDescription="@string/txt_desc_dzikir_pagi_petang"
                    android:src="@drawable/ic_pagi_petang"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_pagi_petang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/txt_dzikir_pagi_petang"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/image_pagi_petang" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>
        <!--    Endregion    -->

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>